# glib

./: config.h.meson  meson.build
glib/: glibconfig.h.in  meson.build
glib/libcharset/: meson.build
tests/: meson.build
